# Multi_Genai_Project

./: .env  .gitignore  agents.py  package-lock.json  pyproject.toml  requirements.txt  server.py  tools.py
research-pipeline-ui/: index.html  package-lock.json  package.json
research-pipeline-ui/src/: App.css  App.jsx
