[project]
name = "gai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain>=1.2.15",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "tavily-python>=0.7.23",
]
